# INFOLABS

./: CMakeLists.txt  Card.cpp  Card.h  Dealer.cpp  Dealer.h  Deck.cpp  Deck.h  Domashka-shablony.cpp  Game.cpp  Game.h  Hand.cpp  Hand.h  Player.cpp  Player.h  README.md  Zadaniye-ch1-1.cpp  Zadaniye-ch1-2.cpp  Zadaniye-ch1-3.cpp  Zadaniye-ch2.cpp  ans_handler.cpp  ans_handler.hpp  best_strategy.cpp  f1.cpp  lab1_bin.cpp  lab1_pryam_p.cpp  lab1_sum_lin.cpp  lab1_sum_pr.cpp  main.cpp  main1.cpp  main2.cpp  main3.cpp  my_math.cpp  my_math.hpp  numero_dos.cpp  numero_tres.cpp  numero_uno.cpp  queue copy.cpp  queue.cpp  task1.cpp  task2.cpp  (+1 more)
include/: Button.h  Layout.h
lab2/: queue.cpp
src/: Button.cpp  Layout.cpp  main.cpp
